prover-ray/zkcdriver/testdata/synced/invalid/memory_01.zkc
//error:5:7-14:invalid memory read
pub output data(address:u16) -> (byte:u8)

fn check() -> (y:u16) {
  y = data[0]
  return
}
